--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server/server.js",
   "scripts": {
     "start": "node server/server.js",
-    "dev": "concurrently \"cd ./server && npm run watch\" \"cd ./client && npm start\"",
+    "dev": "concurrently \"cd ./server && npm run watch\" \"cd ./client && npm run dev\"",
     "install": "cd server && npm i && cd ../client && npm i",
     "build": "cd client && npm run build"
   },
@@ -29,3 +29,4 @@
     "sass": "^1.77.2"
   }
 }
+
